infra.yml
Parameters:

    EnvironmentName:
        Description: A description bla bla
        Type: String

    VpcCIDR:
        Description: Enter the ip range for the VPC
        Type: String
        Default: 10.0.0.0/16
    
    PublicSubnet1:
        Description: Enter the ip range for public subnet 1
        Type: String
        Default: 10.0.0.0/24

    PublicSubnet2:
        Description: Enter the ip range for public subnet 2
        Type: String
        Default: 10.0.1.0/24

    PrivateSubnet1:
        Description: Enter the ip range for private subnet 1
        Type: String
        Default: 10.0.2.0/24

    PrivateSubnet2:
        Description: Enter the ip range for private subnet 1
        Type: String
        Default: 10.0.3.0/24
    

Resources:
    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostname: true
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    InternetGatewayAttachment:
        Type: AWS::EC2::InternetGatewayAttachemnt
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
             VpcID: !Ref VPC
             AvailabilityZone:  !Select [ 0, !GetAZs '' ]
             CidrBlock: !Ref PublicSubnet1CIDR
             MapPublicIpOnLaunch: true
             Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
             VpcID: !Ref VPC
             AvailabilityZone:  !Select [ 1, !GetAZs '' ]
             CidrBlock: !Ref PublicSubnet1CIDR
             MapPublicIpOnLaunch: true
             Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ2)


    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
             VpcID: !Ref VPC
             AvailabilityZone:  !Select [ 0, !GetAZs '' ]
             CidrBlock: !Ref PrivateSubnet1CIDR
             MapPublicIpOnLaunch: true
             Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)
    
    PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
             VpcID: !Ref VPC
             AvailabilityZone:  !Select [ 1, !GetAZs '' ]
             CidrBlock: !Ref PrivateSubnet2CIDR
             MapPublicIpOnLaunch: true
             Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ2)


    
    # NatGateway1EIP:
    #     Type: AWS::EC2::EIP
    #     DependsOn: InternetGatewayAttachment
    #     Properties:
    #         Domain: vpc

    #  NatGateway2EIP:
    #     Type: AWS::EC2::EIP
    #     DependsOn: InternetGatewayAttachment
    #     Properties:
    #         Domain: vpc

    # NatGateway1:
    #     Type: AWS::EC2::NatGateway
    #     Properties: 
    #         AllocationId: !GetAtt NatGateway1EIP.AllocationId
    #         SubnetId: !Ref PublicSubnet1

    # NatGateway2:
    #     Type: AWS::EC2::NatGateway
    #     Properties: 
    #         AllocationId: !GetAtt NatGateway2EIP.AllocationId
    #         SubnetId: !Ref PublicSubnet2
    


    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Routes

    DefaultPublicRoute: 
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties: 
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2


    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ1)

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1

    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            SubnetId: !Ref PrivateSubnet1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ2)

    DefaultPrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway2

    PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            SubnetId: !Ref PrivateSubnet2


Outputs:
    
    VPC: 
        Description: A reference to the created VPC
        Value: !Ref VPC
        Export:
          Name: !Sub ${EnvironmentName}-VPCID

    VPCPublicRouteTable:
        Description: Public routing
        Value: !Ref PublicRouteTable
        Export:
          Name: !Sub ${EnvironmentName}-PUB-RT

    VPCPrivateRouteTable1:
        Description: Private routing AZ1
        Value: !Ref PrivateRouteTable1
        Export:
          Name: !Sub ${EnvironmentName}-PR1-RT

    VPCPrivateRouteTable2:
        Description: Private routing AZ2
        Value: !Ref PrivateRouteTable2
        Export:
          Name: !Sub ${EnvironmentName}-PR2-RT

    PublicSubnets:
        Description: A list of public subnets
        Value: !Join [",", [ !Ref PublicSubnet1, !Ref PublicSubnet2]]
        Export:
          Name: !Sub ${EnvironmentName}-PUBLIC-SUBNETS

    PrivateSubnets:
        Description: A list of private subnets
        Value: !Join [",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2]]
        Export:
          Name: !Sub ${EnvironmentName}-PRIVATE-SUBNETS
    
    PublicSubnet1:
        Description: Public subnet 1
        Value: !Ref PublicSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-PUBLIC-SUBNET1

    PublicSubnet2:
        Description: Public subnet 2
        Value: !Ref PublicSubnet2
        Export:
          Name: !Sub ${EnvironmentName}-PUBLIC-SUBNET2

    PrivateSubnet1:
        Description: Private subnet 1
        Value: !Ref PublicSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-PRIVATE-SUBNET1

    PrivateSubnet2:
        Description: Private subnet 2
        Value: !Ref PublicSubnet2
        Export:
          Name: !Sub ${EnvironmentName}-PRIVATE-SUBNET2
